Add topsApp preprocess test to CI
We can run topsApp up through the preprocess step without needing any
data. This will at least verify that the config is parsed properly.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,6 +53,10 @@ jobs:
             topsApp.py --help --steps
             stripmapApp.py --help --steps
             python3 -c "import isce"
+            # Create dummy ref/secondary configs for topsApp
+            ln -s ../examples/input_files/reference_TOPS_SENTINEL1.xml reference.xml
+            ln -s reference.xml secondary.xml
+            topsApp.py --steps --end=preprocess ../examples/input_files/topsApp.xml
 
   test:
     docker:
